--- a/public/css/app.css
+++ b/public/css/app.css
@@ -135,6 +135,184 @@
   gap: 10px;
 }
 
+.banner {
+  height: 20vh;
+  width: 100%;
+  background: #0282f9;
+}
+
+.banner-content {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  height: 100%;
+}
+
+.banner-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.banner-card__img-container {
+  height: 48px;
+  aspect-ratio: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.banner-card__img-container img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.banner-card p {
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: #fff;
+}
+
+.footer-top {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 40vh;
+  background: #000 url(/images/footer-bg.jpg?dfd68d2946f211e1b678af05fd2f830b) no-repeat center center;
+  background-size: cover;
+}
+
+.footer-top .footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0px 20px;
+}
+
+.footer-top__content {
+  display: flex;
+  flex-direction: column;
+  max-height: 100%;
+  height: 40vh;
+  flex-wrap: wrap;
+  width: 50vw;
+  gap: 20px;
+  align-content: start;
+  padding: 20px 0;
+}
+
+.footer-top__content__nav-list h3 {
+  color: #fff;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.footer-top__content__nav-list ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-top__content__nav-list ul li a {
+  text-decoration: none;
+  color: rgb(137, 137, 137);
+  font-size: 0.9rem;
+  transition: all 0.3s ease;
+}
+
+.footer-top__content__nav-list ul li a:hover {
+  color: #fff;
+}
+
+.footer-top__logo {
+  height: 40vh;
+  width: 30vw;
+  overflow: hidden;
+}
+
+.footer-top__logo img {
+  margin-top: -10%;
+  width: 100%;
+}
+
+.footer-bottom {
+  background: #303030;
+}
+
+.footer-bottom .footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-bottom__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px 20px;
+}
+
+.footer-bottom__content__signup button {
+  background: transparent;
+  color: #fff;
+  border: 2px solid #0282f9;
+  padding: 10px 20px;
+  font-size: 0.9rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.footer-bottom__content__signup button:hover {
+  background: #fff;
+  color: #0282f9;
+}
+
+.footer-bottom__content__social-media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.footer-bottom__content__social-media h3 {
+  color: #0282f9;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.footer-bottom__content__social-media ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  gap: 10px;
+  padding: 0;
+}
+
+.footer-bottom__content__social-media ul li a {
+  text-decoration: none;
+  color: rgb(137, 137, 137);
+  font-size: 0.9rem;
+  transition: all 0.3s ease;
+}
+
+.footer-bottom__content__social-media ul li a:hover {
+  color: #fff;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -145,13 +323,5 @@ body {
   background: #000;
   height: 100vh;
   width: 100vw;
-}
-
-h1 {
-  color: #fff;
-  font-size: 2em;
-  font-weight: bold;
-  margin: 0;
-  padding: 0;
 }
 
