--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,8 @@
 //
 @import "partials/_header";
 @import "partials/_main";
+@import "partials/_banner";
+@import "partials/_footer";
 
 * {
     margin: 0;
@@ -12,12 +14,4 @@ body {
     background: #000;
     height: 100vh;
     width: 100vw;
-}
-
-h1 {
-    color: #fff;
-    font-size: 2em;
-    font-weight: bold;
-    margin: 0;
-    padding: 0;
 }
