detailed page done

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -135,6 +135,40 @@
   gap: 10px;
 }
 
+.main__card {
+  width: calc(16.6666666667% - 20px);
+  overflow: hidden;
+  transition: all 0.3s ease;
+}
+
+.main__card-image {
+  width: 100%;
+  aspect-ratio: 1;
+  overflow: hidden;
+  position: relative;
+  border-radius: 4px;
+  z-index: 1;
+}
+
+.main__card-image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.main__card-content {
+  transition: all 0.3s ease;
+  padding: 20px 2px;
+}
+
+.main__card-content h3 {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin: 0;
+  text-transform: uppercase;
+}
+
 .banner {
   height: 20vh;
   width: 100%;
@@ -313,15 +347,249 @@
   color: #fff;
 }
 
+.top-container__hero {
+  background-image: url(/images/jumbotron.jpg?1b0a3671766964a4114f90322970b124);
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+  height: 40vh;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+}
+
+.top-container__cover-section {
+  background-color: #0282f9;
+  height: 10vh;
+  width: 100%;
+  position: relative;
+}
+
+.top-container__cover-section .top-container__cover {
+  position: absolute;
+  top: -250%;
+  z-index: 1;
+  border: 1px solid #fff;
+}
+
+.top-container__content-section__wrapper {
+  background: #ffffff;
+  min-height: 50vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.top-container__content-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 1;
+  gap: 20px;
+}
+
+.top-container__content h1 {
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #003f5e;
+  text-transform: uppercase;
+  padding-bottom: 1rem;
+}
+
+.top-container__content p {
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: #66615c;
+  padding-bottom: 2rem;
+  line-height: 1.8;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.strange-green-thing__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #55ba59;
+  width: 100%;
+  z-index: 1;
+  border-bottom: #2c5f2e solid 1px;
+  margin: 1rem 0;
+}
+
+.strange-green-thing__container p {
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: #b6f993;
+  padding: 0.5rem;
+}
+
+.strange-green-thing__container .strange-green-thing__price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-grow: 1;
+  height: 100%;
+  border-right: #2f6231 solid 1px;
+  padding: 0px 10px;
+}
+
+.strange-green-thing__container .strange-green-thing__price span {
+  color: #fff;
+}
+
+.strange-green-thing__container .strange-green-thing__check-disponibility {
+  padding: 0px 10px;
+}
+
+.strange-green-thing__container .strange-green-thing__check-disponibility p {
+  color: #fff;
+}
+
+.specific-container {
+  background: #f6f6f6;
+  padding-bottom: 5rem;
+}
+
+.specific-container__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 40px;
+}
+
+.specific-container__wrapper .specific__talent {
+  width: 50%;
+  padding: 2rem 0;
+}
+
+.specific-container__wrapper .specific__talent-box {
+  border-bottom: #dadada solid 1px;
+}
+
+.specific-container__wrapper .specific__talent-box h2 {
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: #003f5e;
+  padding-bottom: 1.5rem;
+}
+
+.specific-container__wrapper .specific__talent-box__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 1rem 0;
+}
+
+.specific-container__wrapper .specific__talent-box__content h4 {
+  width: 30%;
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: #66615c;
+}
+
+.specific-container__wrapper .specific__talent-box__content p {
+  width: 70%;
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: #66615c;
+}
+
+.specific-container__wrapper .specific__talent-box__content .artist {
+  color: #47a6ff;
+}
+
+.specific-container__wrapper .specific__talent-box__content .serie {
+  color: #47a6ff;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.additional-banner {
+  background: #f6f6f6;
+  border-top: #dadada solid 1px;
+}
+
+.additional-banner-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.additional-banner-wrapper__content {
+  width: 25%;
+  height: 60px;
+  padding: 0.5rem;
+  border-right: #dadada solid 1px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.additional-banner-wrapper__content h5 {
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: #66615c;
+  text-transform: uppercase;
+}
+
+.additional-banner-wrapper__content .img {
+  width: 37px;
+  height: 37px;
+}
+
+.additional-banner-wrapper__content .img-1 {
+  background-image: url(/images/cta-icons.png?66ce11d0fe1c08d1276451a49fdd1bb9);
+  background-position: 0 0;
+}
+
+.additional-banner-wrapper__content .img-2 {
+  background-image: url(/images/cta-icons.png?66ce11d0fe1c08d1276451a49fdd1bb9);
+  background-position: -37px 0;
+}
+
+.additional-banner-wrapper__content .img-3 {
+  background-image: url(/images/cta-icons.png?66ce11d0fe1c08d1276451a49fdd1bb9);
+  background-position: -74px 0;
+}
+
+.additional-banner-wrapper__content .img-4 {
+  background-image: url(/images/cta-icons.png?66ce11d0fe1c08d1276451a49fdd1bb9);
+  background-position: -111px 0;
+}
+
+.additional-banner-wrapper__content:hover {
+  cursor: pointer;
+}
+
+.additional-banner-wrapper__content:hover .img-1,
+.additional-banner-wrapper__content:hover .img-2,
+.additional-banner-wrapper__content:hover .img-3,
+.additional-banner-wrapper__content:hover .img-4 {
+  background-position-y: -37px;
+}
+
+.additional-banner-wrapper:first-child {
+  border-left: #dadada solid 1px;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Open Sans" serif;
 }
 
 body {
+  font-family: "Open Sans" serif;
   background: #000;
   height: 100vh;
   width: 100vw;
+  scroll-behavior: smooth;
 }
 
