--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -6,7 +6,7 @@
     .jumbotron {
         width: 100%;
         height: 42vh;
-        background: url("../assets/jumbotron.jpg") no-repeat;
+        background: url("./../assets/jumbotron.jpg") no-repeat;
         background-size: cover;
         position: relative;
     }
@@ -56,5 +56,34 @@
         width: 100%;
         padding: 40px 0;
         gap: 10px;
+    }
+    &__card {
+        width: calc((100% / 12) * 2 - 20px);
+        overflow: hidden;
+        transition: all 0.3s ease;
+
+        &-image {
+            width: 100%;
+            aspect-ratio: 1;
+            overflow: hidden;
+            position: relative;
+            border-radius: 4px;
+            z-index: 1;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+        &-content {
+            transition: all 0.3s ease;
+            padding: 20px 2px;
+            h3 {
+                font-size: 1.2rem;
+                font-weight: 700;
+                margin: 0;
+                text-transform: uppercase;
+            }
+        }
     }
 }
