--- a/resources/sass/partials/_comicDetail.scss
+++ b/resources/sass/partials/_comicDetail.scss
@@ -20,6 +20,41 @@
             top: -250%;
             z-index: 1;
             border: 1px solid #fff;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+            .top-left-tag {
+                position: absolute;
+                top: 0%;
+                left: 0%;
+                z-index: 1;
+                background-color: #0282f9;
+                color: #fff;
+                padding: 4px;
+                font-size: 0.6rem;
+                font-weight: 500;
+                text-transform: uppercase;
+                text-align: center;
+            }
+
+            .bottom-tag {
+                position: absolute;
+                width: 100%;
+                bottom: 0%;
+                left: 0%;
+                z-index: 1;
+                background-color: #0282f9;
+                color: #fff;
+                padding: 4px;
+                font-size: 0.6rem;
+                font-weight: 500;
+                text-transform: uppercase;
+                text-align: center;
+            }
         }
     }
 
@@ -34,7 +69,7 @@
     &__content-section {
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         position: relative;
         z-index: 1;
         gap: 20px;
@@ -53,6 +88,15 @@
             color: #66615c;
             padding-bottom: 2rem;
             line-height: 1.8;
+        }
+    }
+    .advertising-section {
+        .adv-identity {
+            text-transform: uppercase;
+            font-size: 0.8rem;
+            font-weight: 700;
+            color: #66615c;
+            text-align: right;
         }
     }
 }
