--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25,6 +25,13 @@
   width: 80px;
 }
 
+.header__nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 20px;
+}
+
 .header__nav-list {
   display: flex;
   align-items: center;
@@ -65,6 +72,39 @@
   transform: scaleX(0);
   transform-origin: center;
   transition: transform 0.2s ease-in-out;
+}
+
+.header__nav .search-input {
+  border-bottom: 4px solid #0282f9;
+  padding: 0 10px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #383838;
+  transition: color 0.2s ease-in-out;
+}
+
+.header__nav .search-input input {
+  height: 100%;
+  border: none;
+  background: transparent;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  color: #383838;
+  transition: color 0.2s ease-in-out;
+  text-align: right;
+}
+
+.header__nav .search-input input:focus {
+  color: #0282f9;
+}
+
+.header__nav .search-input button {
+  height: 100%;
+  border: none;
+  background: transparent;
+  outline: none;
+  cursor: pointer;
 }
 
 .main {
