imported font awesome

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,7 @@
 @import "partials/_banner";
 @import "partials/_footer";
 @import "partials/_comicDetail";
+@import "node_modules/font-awesome/scss/font-awesome.scss";
 
 * {
     margin: 0;
