--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -64,12 +64,17 @@
             }
         }
         .search-input {
-            border-bottom: 4px solid #0282f9;
+            border-bottom: 2px solid #0282f9;
             padding: 0 10px;
+            max-width: 200px;
             font-size: 14px;
             font-weight: 600;
             color: #383838;
             transition: color 0.2s ease-in-out;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            gap: 10px;
 
             input {
                 height: 100%;
@@ -91,6 +96,13 @@
                 background: transparent;
                 outline: none;
                 cursor: pointer;
+                font-size: 18px;
+                font-weight: 600;
+                color: #383838;
+                transition: color 0.2s ease-in-out;
+                &:hover {
+                    color: #0282f9;
+                }
             }
         }
     }
