passed data to detailed routing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -194,6 +194,10 @@
   transition: all 0.3s ease;
 }
 
+.main__card a {
+  text-decoration: none;
+}
+
 .main__card-image {
   width: 100%;
   aspect-ratio: 1;
@@ -216,10 +220,12 @@
 }
 
 .main__card-content h3 {
-  font-size: 1.2rem;
+  font-size: 0.8rem;
   font-weight: 700;
   margin: 0;
   text-transform: uppercase;
+  color: #fff;
+  text-decoration: none;
 }
 
 .banner {
