--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -62,6 +62,10 @@
         overflow: hidden;
         transition: all 0.3s ease;
 
+        a {
+            text-decoration: none;
+        }
+
         &-image {
             width: 100%;
             aspect-ratio: 1;
@@ -79,10 +83,12 @@
             transition: all 0.3s ease;
             padding: 20px 2px;
             h3 {
-                font-size: 1.2rem;
+                font-size: 0.8rem;
                 font-weight: 700;
                 margin: 0;
                 text-transform: uppercase;
+                color: #fff;
+                text-decoration: none;
             }
         }
     }
