--- a/public/css/app.css
+++ b/public/css/app.css
@@ -74,6 +74,14 @@
   transition: transform 0.2s ease-in-out;
 }
 
+.header__nav-item-link-active {
+  color: #0282f9;
+}
+
+.header__nav-item-link-active:after {
+  transform: scaleX(1);
+}
+
 .header__nav .search-input {
   border-bottom: 2px solid #0282f9;
   padding: 0 10px;
